<resources>
    <string name="duty_tracker">Duty Tracker</string>
    <string name="welcome_to">Welcome to</string>
    <string name="paperless_platform">This paperless platform improves efficiency</string>
    <string name="reduces_errors">reduces errors, and offers an intuitive interface for</string>
    <string name="manage_duty_logs">students and teachers to manage duty logs</string>
    <string name="seamlessly">seamlessly</string>
    <string name="form">Form</string>
    <string name="hk">HK Duty Tracker </string>
    <string name="signup">Sign Up</string>
    <string name="hello">Hello! Let\'s Track your Duty Hours online with ease!</string>
    <string name="Sid">Student ID</string>
    <string name="pass">Password</string>
    <string name="conf">Confirm Password</string>
    <string name="chck">I agree with the privacy policy</string>
    <string name="bg">bg</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agree_with_privacy_policy">I Agree with privacy policy</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="sign_in">Sign In</string>

    //DUTY TYPES
    <string-array name="duty_status_options">
        <item>Select Duty Status</item>
        <item>Office Duty</item>
        <item>Student Facilitator</item>
        <item>HK BBS</item>
    </string-array>

    <string-array name="scholar_type_options">
        <item>Select Scholar Type</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
    </string-array>

    <string-array name="course_options">
        <item>Select Course</item>
        <item>CITE</item>
        <item>CMA</item>
        <item>CRIM</item>
    </string-array>

    <string-array name="year_level_options">
        <item>Select Year Level</item>
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hk_duty_status">HK Duty Status:</string>
    <string name="duty_hours_track">DUTY HOURS TRACK</string>
    <string name="date">Date</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="remarks">Remarks</string>
    <string name="auth_sign">Auth. Sign</string>
    <string name="_2025_02_19">2025-02-19</string>
    <string name="_08_00_am">08:00 AM</string>
    <string name="_05_00_pm">05:00 PM</string>
    <string name="on_time">On Time</string>
    <string name="signed">Signed</string>
    <string name="login">Login</string>
    <string name="logintext">LOGIN</string>
    <string name="Title">HK DUTY TRACKER</string>
    <string name="logo">Logo</string>
    <string name="student_id_text">Student ID</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="approved_by">Approved By:</string>
    <string name="verfied_by">Verfied By:</string>
    <string name="schedule">Schedule:</string>
    <string name="subject">Subject:</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>

</resources>