<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dtr">


    <TextView
        android:id="@+id/txtDuty"
        android:layout_width="407dp"
        android:layout_height="64dp"
        android:paddingBottom="20dp"
        android:text="@string/duty_hours_track"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="82dp" />

    <TextView
        android:layout_width="409dp"
        android:layout_height="38dp"
        android:text="@string/hk_duty_status"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="normal"
        android:textAllCaps="true"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="80dp"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109">


    </ScrollView>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="211dp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="570dp" />

    <ImageButton
        android:id="@+id/btnNotification"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/notification"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtSubj"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:text="@string/subject"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="145dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtSched"
        android:layout_width="84dp"
        android:layout_height="33dp"
        android:text="@string/schedule"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="180dp"
        tools:ignore="MissingConstraints" />


    <TableLayout
        android:layout_width="430dp"
        android:layout_height="358dp"
        android:padding="16dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569">

        <!-- Table Header -->
        <TableRow
            android:layout_width="402dp"
            android:layout_height="wrap_content"
            android:background="@color/lightgreen">

            <TextView
                android:id="@+id/Date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:padding="8dp"
                android:text="@string/date"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/TimeIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TimeOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time_out"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtRemarks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/remarks"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAuthSign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/auth_sign"
                android:textStyle="bold" />
        </TableRow>

        <!-- Data Row -->
        <TableRow
            android:layout_width="400dp"
            android:layout_height="51dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_2025_02_19" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_08_00_am" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_05_00_pm" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/on_time" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/signed" />
        </TableRow>

    </TableLayout>


    <TextView
        android:id="@+id/verify1"
        android:layout_width="197dp"
        android:layout_height="33dp"
        android:text="@string/verfied_by"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="572dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/verify2"
        android:layout_width="197dp"
        android:layout_height="33dp"
        android:text="@string/approved_by"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="572dp"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="408dp"
        android:layout_height="94dp"
        android:background="@color/white"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"
        tools:layout_editor_absoluteY="633dp" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="400dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <!-- Bottom Navigation View -->

</androidx.constraintlayout.widget.ConstraintLayout>

